[package]
name = "cyot"
version = "0.1.0"
authors = ["Felix S. Klock II <pnkfelix@pnkfx.org>"]

# The `build = ...` line is how we hook in the tango-preprocessor.
# It can be as simple as:
# ```rust
# extern crate tango;
#
# fn main() { tango::process_root().unwrap() }
# ```

# Our specialized build script first runs `tango` to bring the
# `.rs` and `.md` files into sync, and then it runs `pandoc`
# as an external program to convert a selection of the `.md`
# files into `reveal.js` slideshows.

build = "build.rs"

# The preprocessor is the `tango` crate, so we need to add that
# to the build-dependencies.

[build-dependencies.tango]
git = "https://github.com/pnkfelix/tango"

[dependencies]
libc = "*"

# Since the lib may be a tango file stored in `src/lib.md`, we need to
# explicitly specify that this is a library project with a `[lib]`
# section, which then requires an explicit name.

[lib]
name = "lib"

[[bin]]
name = "exercise010"
path = "src/tutorial/section010.rs"

[[bin]]
name = "exercise020"
path = "src/tutorial/section020.rs"

[[bin]]
name = "exercise030"
path = "src/tutorial/section030.rs"
